# systemy-rozproszone-chat

./: CMakeLists.txt  README.md  client.cpp  consolePrinter.h  inputCollector.h  pictures.h  server.cpp
images/: plane.txt  tooks.txt
net/: net.h
net/headers/: client.h  connection.h  server.h  tsqueue.h
net/sources/: client.cpp  connection.cpp  server.cpp  tsqueue.cpp
